Fixed icon and tooltip gap

--- a/src/css/view/tooltip.scss
+++ b/src/css/view/tooltip.scss
@@ -1,7 +1,7 @@
 .eael-tooltip {
 	position: relative;
 	display: inline-block;
-	min-width: 150px;
+	// min-width: 150px;
 	padding: 12px 24px;
 	font-size: .93rem;
 	color: #333;
